# opc-ua-inferer

./: Dockerfile  README.md  conf_test  inference.py  kill.sh  note  set_client_nb
mapper/: Cargo.toml  README.md  compile
mapper/derive_macro/: Cargo.toml
mapper/derive_macro/src/: lib.rs
mapper/src/: error.rs  handle.rs  lib.rs
mapper/src/crypto/: encryption.rs  hash.rs  mod.rs  pkey.rs  random.rs  raw_rsa.rs  security_policy.rs  signature.rs  x509.rs
mapper/src/crypto/tests/: derive_key_test.rs  encryption_test.rs  hash_test.rs  key.pem  mod.rs  pubkey.pem
mapper/src/msg/: acknowledge.rs  active_sessions.rs  close_secure_channel.rs  close_session.rs  create_session.rs  error.rs  get_endpoints.rs  hello.rs  message_type.rs  mod.rs  nullsize.rs  open_secure_channel.rs  parser.rs  read.rs  reverse_hello.rs  service_fault.rs  write.rs
mapper/src/msg/header/: additional_header.rs  connection_message_header.rs  footer.rs  message_header.rs  mod.rs  request_header.rs  response_header.rs  security_header.rs  sequence_header.rs
mapper/src/uatypes/: application_description.rs  array.rs  attribute_id.rs  basic_type.rs  byte_string.rs  data_type_id.rs  data_value.rs  date_time.rs  diagnostic_info.rs  encrypted_secret.rs  endpoint_description.rs  expanded_node_id.rs  extension_object.rs  guid.rs  localized_text.rs  mod.rs  node_id.rs  qualified_name.rs  read_value_id.rs  security_mode.rs  signature_data.rs  status_code.rs  string.rs  user_identity_token.rs  variant.rs  write_value.rs  xml_element.rs
mapper/src/uatypes/tests/: decoding.rs  encoding.rs
(+927 files in other folders)
